# radDefects

./: CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: Development.rst  Installation.rst  Tutorials.rst  conf.py  index.rst  raddefects.analysis.transition_levels.rst  raddefects.carriercapture.rst  raddefects.core.rst  raddefects.plotting.rst  raddefects.rst  raddefects.sxda.analysis.rst  raddefects.sxda.io.rst  requirements.txt
examples/: GaN_cc_template.ipynb
radDefects/: auto_sxda  core.py  rad_defects
radDefects/analysis/: transition_levels.py
radDefects/sxda/: analysis.py
radDefects/util/: atomic_sph_avg.p  plnr_avgs.p
raddefects/: __init__.py  carriercapture.py  core.py  plotting.py
raddefects/sxda/: auto_sxda
