[project]
name = "raddefects"
dynamic = ["version"]
authors = [
  { name="Alexander Hauck", email="ash5615@psu.edu" },
]
description = "Framework to analyze properties of radiation-induced defects in semiconductor materials from first principles."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.12"',
    "numpy",
    "pymatgen",
    "mp-api",
    "vise",
    "pydefect",
    "sumo",
    "pymatgen-analysis-defects",
    "niet"
]

[project.urls]
Homepage = "https://radDefects.readthedocs.io/en/latest/"
Repository = "https://github.com/hauck-as/radDefects"

[project.scripts]
cli-name = "raddefects.cli.main:main"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.setuptools_scm]
# version_scheme = "only-version"
local_scheme = "no-local-version"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
